@@ -5,7 +5,7 @@ from . import serializers
 from .. import common
 
 
-class UserStatsViewSet(common.APIReadOnlyModelViewSet):
+class UserStatsViewSet(common.DataMartViewSet):
     serializer_class = serializers.UserStatsSerializer
     queryset = models.UserStats.objects.all()
-    filter_fields = ('country_name', 'month')
+    filter_fields = ('country_name', 'month', 'last_modify_date')
