@@ -1,8 +1,7 @@
-# Generated by Django 2.1.3 on 2018-11-28 14:10
+# Generated by Django 2.1.3 on 2018-11-29 08:24
 
 import django.contrib.postgres.fields.jsonb
 import month_field.models
-import unicef_security.models
 from django.db import migrations, models
 
 
@@ -20,6 +19,7 @@ class Migration(migrations.Migration):
                 ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                 ('country_name', models.CharField(db_index=True, max_length=50)),
                 ('schema_name', models.CharField(db_index=True, max_length=50)),
+                ('last_modify_date', models.DateTimeField(auto_now=True, auto_now_add=True)),
                 ('month', month_field.models.MonthField(verbose_name='Month Value')),
                 ('spotcheck_ip_contacted', models.IntegerField(default=0, verbose_name='Spot Check-IP Contacted')),
                 ('spotcheck_report_submitted', models.IntegerField(default=0, verbose_name='Spot Check-Report Submitted')),
@@ -42,7 +42,6 @@ class Migration(migrations.Migration):
                 'verbose_name': 'FAM Indicator',
                 'ordering': ('month', 'country_name'),
             },
-            bases=(models.Model, unicef_security.models.TimeStampedModel),
         ),
         migrations.CreateModel(
             name='HACT',
@@ -50,6 +49,7 @@ class Migration(migrations.Migration):
                 ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                 ('country_name', models.CharField(db_index=True, max_length=50)),
                 ('schema_name', models.CharField(db_index=True, max_length=50)),
+                ('last_modify_date', models.DateTimeField(auto_now=True, auto_now_add=True)),
                 ('year', models.IntegerField()),
                 ('microassessments_total', models.IntegerField(default=0, help_text='Total number of completed Microassessments in the business area in the past year')),
                 ('programmaticvisits_total', models.IntegerField(default=0, help_text='Total number of completed Programmatic visits in the business area')),
@@ -62,7 +62,6 @@ class Migration(migrations.Migration):
                 'verbose_name': 'HACT',
                 'ordering': ('year', 'country_name'),
             },
-            bases=(models.Model, unicef_security.models.TimeStampedModel),
         ),
         migrations.CreateModel(
             name='Intervention',
@@ -70,6 +69,7 @@ class Migration(migrations.Migration):
                 ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                 ('country_name', models.CharField(db_index=True, max_length=50)),
                 ('schema_name', models.CharField(db_index=True, max_length=50)),
+                ('last_modify_date', models.DateTimeField(auto_now=True, auto_now_add=True)),
                 ('created', models.DateTimeField(auto_now=True)),
                 ('updated', models.DateTimeField(null=True)),
                 ('document_type', models.CharField(max_length=255, null=True)),
@@ -115,7 +115,6 @@ class Migration(migrations.Migration):
                 'verbose_name': 'Intervention',
                 'ordering': ('country_name', 'title'),
             },
-            bases=(models.Model, unicef_security.models.TimeStampedModel),
         ),
         migrations.CreateModel(
             name='PMPIndicators',
@@ -123,6 +122,7 @@ class Migration(migrations.Migration):
                 ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                 ('country_name', models.CharField(db_index=True, max_length=50)),
                 ('schema_name', models.CharField(db_index=True, max_length=50)),
+                ('last_modify_date', models.DateTimeField(auto_now=True, auto_now_add=True)),
                 ('vendor_number', models.CharField(db_index=True, max_length=255, null=True)),
                 ('business_area_code', models.CharField(db_index=True, max_length=100, null=True)),
                 ('partner_name', models.CharField(db_index=True, max_length=255, null=True)),
@@ -157,7 +157,6 @@ class Migration(migrations.Migration):
                 'verbose_name': 'PMP Indicator',
                 'ordering': ('country_name', 'partner_name'),
             },
-            bases=(models.Model, unicef_security.models.TimeStampedModel),
         ),
         migrations.CreateModel(
             name='UserStats',
@@ -165,6 +164,7 @@ class Migration(migrations.Migration):
                 ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                 ('country_name', models.CharField(db_index=True, max_length=50)),
                 ('schema_name', models.CharField(db_index=True, max_length=50)),
+                ('last_modify_date', models.DateTimeField(auto_now=True, auto_now_add=True)),
                 ('month', month_field.models.MonthField(verbose_name='Month Value')),
                 ('total', models.IntegerField(default=0, verbose_name='Total users')),
                 ('unicef', models.IntegerField(default=0, verbose_name='UNICEF uswers')),
@@ -175,7 +175,6 @@ class Migration(migrations.Migration):
                 'verbose_name': 'User Access Statistics',
                 'ordering': ('-month', 'country_name'),
             },
-            bases=(models.Model, unicef_security.models.TimeStampedModel),
         ),
         migrations.AlterUniqueTogether(
             name='userstats',
