@@ -3,7 +3,6 @@ from django.contrib.contenttypes.models import ContentType
 from django.db import models
 from django.db.models import QuerySet
 from django.db.models.manager import BaseManager
-from unicef_security.models import TimeStampedModel
 
 
 class DataMartQuerySet(QuerySet):
@@ -20,9 +19,10 @@ class DataMartManager(BaseManager.from_queryset(DataMartQuerySet)):
     #     self.raw('TRUNCATE TABLE {0}'.format(self.model._meta.db_table))
 
 
-class DataMartModel(models.Model, TimeStampedModel):
+class DataMartModel(models.Model):
     country_name = models.CharField(max_length=50, db_index=True)
     schema_name = models.CharField(max_length=50, db_index=True)
+    last_modify_date = models.DateTimeField(blank=True, auto_now=True)
 
     class Meta:
         abstract = True
