@@ -1,27 +1,0 @@
-# Generated by Django 2.1.3 on 2018-11-28 14:10
-
-import django.db.models.deletion
-from django.conf import settings
-from django.db import migrations, models
-
-
-class Migration(migrations.Migration):
-
-    initial = True
-
-    dependencies = [
-        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
-        ('subscriptions', '0001_initial'),
-    ]
-
-    operations = [
-        migrations.AddField(
-            model_name='subscription',
-            name='user',
-            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='subscriptions', to=settings.AUTH_USER_MODEL),
-        ),
-        migrations.AlterUniqueTogether(
-            name='subscription',
-            unique_together={('user', 'content_type', 'kwargs')},
-        ),
-    ]
