@@ -1,4 +1,4 @@
-# Generated by Django 2.1.3 on 2018-11-28 14:10
+# Generated by Django 2.1.3 on 2018-11-29 08:24
 
 import django.utils.timezone
 import strategy_field.fields
