@@ -1,51 +1,0 @@
-# Generated by Django 2.1.3 on 2018-11-28 14:10
-
-import django.db.models.deletion
-from django.conf import settings
-from django.db import migrations, models
-
-
-class Migration(migrations.Migration):
-
-    initial = True
-
-    dependencies = [
-        ('unicef_rest_framework', '0001_initial'),
-        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
-        ('tracking', '0001_initial'),
-    ]
-
-    operations = [
-        migrations.AddField(
-            model_name='usercounter',
-            name='user',
-            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL),
-        ),
-        migrations.AddField(
-            model_name='pathcounter',
-            name='service',
-            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, to='unicef_rest_framework.Service'),
-        ),
-        migrations.AddField(
-            model_name='monthlycounter',
-            name='user',
-            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL),
-        ),
-        migrations.AddField(
-            model_name='apirequestlog',
-            name='user',
-            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL),
-        ),
-        migrations.AlterUniqueTogether(
-            name='usercounter',
-            unique_together={('day', 'user')},
-        ),
-        migrations.AlterUniqueTogether(
-            name='pathcounter',
-            unique_together={('day', 'path')},
-        ),
-        migrations.AlterUniqueTogether(
-            name='monthlycounter',
-            unique_together={('day', 'user')},
-        ),
-    ]
