@@ -1,4 +1,4 @@
-# Generated by Django 2.1.3 on 2018-11-28 14:10
+# Generated by Django 2.1.3 on 2018-11-29 08:24
 
 import django.db.models.deletion
 from django.conf import settings
@@ -10,10 +10,10 @@ class Migration(migrations.Migration):
     initial = True
 
     dependencies = [
-        ('unicef_rest_framework', '0001_initial'),
-        ('contenttypes', '0002_remove_content_type_name'),
-        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
         ('auth', '0009_alter_user_last_name_max_length'),
+        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
+        ('contenttypes', '0002_remove_content_type_name'),
+        ('unicef_rest_framework', '0001_initial'),
     ]
 
     operations = [
